# backend/code/infraestructure/keycloak-client/src/main/resources/openapi/openapi.yaml
@@ -202,6 +202,35 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Token'
+  /realms/{realm}/protocol/openid-connect/logout:
+    parameters:
+      - in: path
+        name: realm
+        description: realm name
+        required: true
+        schema:
+          type: string
+    post:
+      tags:
+        - Auth
+      operationId: logout
+      summary: Logout
+      requestBody:
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              type: object
+              properties:
+                client_id:
+                  type: string
+                client_secret:
+                  type: string
+                refresh_token:
+                  type: string
+        required: true
+      responses:
+        '204':
+          description: success
 components:
   schemas:
     UserRepresentation:
@@ -334,6 +363,8 @@ components:
         username:
           type: string
         password:
+          type: string
+        refresh_token:
           type: string
     Token:
       type: object
