# backend/code/infraestructure/repository/src/main/java/es/ucm/luisegui/dunktomic/infrastructure/repository/AuthRepositoryImpl.java
@@ -17,7 +17,7 @@ public class AuthRepositoryImpl implements AuthRepository
     private String CLIENT_ID;
     @Value("${keycloak.client-secret}")
     private String CLIENT_SECRET;
-    private static final String GRANT_TYPE = "password";
+    private String GRANT_TYPE = "";
 
     public AuthRepositoryImpl(AuthApi authApi) {
         this.authApi = authApi;
@@ -25,9 +25,21 @@ public class AuthRepositoryImpl implements AuthRepository
 
     @Override
     public Optional<Token> grantAccessToken(String email, String password) {
+        GRANT_TYPE = "password";
         TokenMapper tokenMapper = new TokenMapper();
         try {
-            return authApi.exchangeToken(REALM, CLIENT_ID, CLIENT_SECRET, GRANT_TYPE, null, email, password)
+            return authApi.exchangeToken(REALM, CLIENT_ID, CLIENT_SECRET, GRANT_TYPE, null, email, password, null)
+                .map(tokenMapper::toEntity).blockOptional();
+        } catch (Exception e) {
+            return Optional.empty();
+        }
+    }
+
+    public Optional<Token> refreshAccessToken(String refreshToken) {
+        GRANT_TYPE = "refresh_token";
+        TokenMapper tokenMapper = new TokenMapper();
+        try {
+            return authApi.exchangeToken(REALM, CLIENT_ID, CLIENT_SECRET, GRANT_TYPE, null, null, null, refreshToken)
                 .map(tokenMapper::toEntity).blockOptional();
         } catch (Exception e) {
             return Optional.empty();
